# edit

./: .cursorrules  Cargo.toml  PROJECT_RULES.md  PROJECT_STATUS.md  PROJECT_TIMELINE.md  README.md  especificacao_funcional_v1_editor_linux.md
docs/: EDITOR_LINUX_MASTER_REQUIREMENTS.md  REFERENCE_UX_TURBO_VISION.md  SPEC_BLOCK_MULTI_CURSOR.md
specs/done/: EDITOR_LINUX_SPEC_ARQUITETURA_GERAL.md  EDITOR_LINUX_SPEC_CURSOR_INITIAL_COMPLETE.md  EDITOR_LINUX_SPEC_CURSOR_V1.md  SPEC-EDITOR-SPLIT-VIEW.md  SPEC-MENU-AJUDA.md  SPEC-MENU-ARQUIVO-EXIBIR.md  SPEC-MENU-EDITAR.md  SPEC-MENU-FORMATACAO-TABULACAO.md  SPEC-MENU-SHELL.md  SPEC-MODAL-ARQUIVO.md  SPEC-MODAL-TEXT-INPUT-BUSCA.md  SPEC-MULTPLOS-ARQUIVOS.md  SPEC-REFERENCE-PANE-SIDEKICK.md  SPEC-TERMINAL-INFERIOR.md
specs/report/: IMPLEMENTACAO_ARQUITETURA_ROPEY.md  IMPLEMENTACAO_INITIAL_COMPLETE.md  IMPLEMENTACAO_MENU_ARQUIVO_EXIBIR.md  IMPLEMENTACAO_MENU_EDITAR.md  IMPLEMENTACAO_MENU_FORMATACAO_TABULACAO.md  IMPLEMENTACAO_MENU_SHELL.md  IMPLEMENTACAO_V1_COMPILAVEL.md
specs/to-do/: EDITOR_LINUX_SPEC_CURSOR_V1.1.md  SPEC-EDITOR-SPLIT-VIEW.md  SPEC-LIMITACOES-PENDENTES.md  SPEC-MENU-AJUDA.md  SPEC-MODAL-ARQUIVO.md  SPEC-MULTPLOS-ARQUIVOS.md  SPEC-TERMINAL-INFERIOR.md  (+2 more)
src/: app.rs  app_editor_split.rs  app_reference_pane.rs  app_workspace.rs  block_select.rs  cli.rs  clipboard.rs  config.rs  cursors.rs  document.rs  edit_mode.rs  editor.rs  editor_split.rs  encoding.rs  events.rs  file_io.rs  find.rs  main.rs  memory.rs  menus.rs  mod.rs  modal.rs  platform.rs  recent.rs  reference_pane.rs  theme.rs  ui.rs  view_state.rs
(+53 files in other folders)
