[package]
name = "edit"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
ropey = "1"
arboard = "3"
sysinfo = { version = "0.33", default-features = false, features = ["system"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
vt100 = "0.16"
